# ml_feature_dev

./: .gitignore  PROJECT_CODE_UNDERSTANDING.md  REFACTOR_ROADMAP.md  pyproject.toml  requirements.txt
configs/: baseline_v2.json  baseline_v2_fineMovement.json  baseline_v2_grossMovement.json  deployment_fine.json  deployment_gross.json
data/processed/: 20260121-GZNFYY-subdural-grossMovement-uECoG.pkl
data/processed/feature_cache/: WHTJYY-subdural-fineMovement-day1-1_features.pkl  WHTJYY-subdural-fineMovement-day2-1_features.pkl  (+3 more)
models/: cross_subjects_model_20260309.pkl
outputs/baseline_v2/: run_summary.json
outputs/baseline_v2_grossMovement/: run_summary.json
src/: cross_time.py  export_deployment_models.py  ml_decoder_model.pkl  pipeline.ipynb  pipeline.py  run_all_experiments.py
src/common/: config_loader.py
src/core/: __init__.py  config.py  datasets.py
src/data/: indexer.py  loader.py
src/evaluate/: metrics.py  reports.py
src/featureExtract/: __init__.py  feature_extract.py
src/features/: psd_features.py
src/models/: __init__.py  ml_feature_model.py  model_factory.py  trainer.py
src/preprocess/: __init__.py  pipeline.py  preprocessor.py
src/shap/: __init__.py  shap_analysis.py
src/shap_analysis/: __init__.py  shap_analysis.py
src/split/: strategies.py
src/utils/: data_check.py
src/visualize/: __init__.py  metrics.py  shap_plots.py  style.py  visualizer.py
src/workflows/: __init__.py  cross_time_workflow.py  data_io.py  deployment_export.py  feature_workflow.py  offline_runner.py  reporting.py  training_workflow.py
(+59 files in other folders)
