[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-feature-dev"
version = "0.1.0"
description = "uECoG feature extraction, model training, and interpretability pipeline"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "seaborn>=0.13",
  "shap>=0.46",
  "tqdm>=4.66",
]


[tool.setuptools.packages.find]
include = ["src*"]

